clang/test/BSC/Positive/OwnedStruct/Destructor/static-var-destructor.cbs
// RUN: %clang %s -o %test.output
// RUN: %test.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
int y  = 0;
owned struct B{
    ~B(B this){
       y=y+2;
    }
};
owned struct A {
public:
  ~A( A this) {
    y++;
  }
};

int main() {
   static B b ={};
    A a ={};
   return y-1;
}